--- a/src/components/components-style.css
+++ b/src/components/components-style.css
@@ -2,6 +2,16 @@ html,
 body {
   background-color: #cae8d5;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
+
+  min-width: 100%;
+  width: 100%;
+  max-width: 100%;
+
+  min-height: 100%;
+  height: 100%;
+  max-height: 100%;
 }
 
 .keyboard-key {
@@ -26,6 +36,14 @@ body {
 
 .plain-flex {
   display: flex;
+}
+
+.center-key {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .display-column-center {
